test/hostNetwork.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-fail-hostnetwork
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fail-hostnetwork
  template:
    metadata:
      labels:
        app: fail-hostnetwork
    spec:
      hostNetwork: true

      containers:
      - name: nginx
        image: nginx:1.21.6
