test/k8spsphostnetworkingports.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnetworkingports
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNetworkingPorts

      validation:
        openAPIV3Schema:
          type: object
          properties:
            hostNetwork:
              type: boolean

  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8spsphostnetworkingports


      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "hostNetwork=true is forbidden"
      }
      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.hostNetwork == true
        msg := "hostNetwork=true is forbidden"
      }
