test/lastest.yaml
# test-fail-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-fail-latest
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
