test/pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-unsigned
spec:
  containers:
  - name: test-signed
    image: nginx:latest
    resources:
      limits:
        cpu: "200m"
        memory: "256Mi"
      requests:
        cpu: "100m"
        memory: "128Mi"
