test/runAsUser.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-violation-root-user
  namespace: demo
  labels:
    app: test-root
spec:
  securityContext:
    runAsNonRoot: false 
  containers:
  - name: ubuntu-container
    image: ubuntu:22.04
    command: ["sleep", "3600"]
    securityContext:
      runAsUser: 0
      allowPrivilegeEscalation: true
