test/test-fail-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-fail-replicas
spec:
  replicas: 10

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6
